--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title>sayurbox</title>
+        <title>example</title>
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-        <link rel="shortcut icon" type="image/png" href="assets/images/sbox.ico"/>
 
         <!-- build:css assets/styles/vendors.css -->
         <!-- bower:css -->
